--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,3 @@
-# hello-world
-Hello, world!
-
-# Build settings
-markdown: kramdown
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
